20251201 - Настройка Git LFS для изображений и добавление информации об Австрии из Plonk It

--- a/src/20251201_austria.md
+++ b/src/20251201_austria.md
@@ -1,7 +1,7 @@
 ---
 title: Австрия
 type: Evergreen
-status: TODO
+status: IN PROGRESS
 category: География / Страны / Европа
 topic: География
 ---
@@ -20,20 +20,471 @@ topic: География
 **Alpha-2 код:** AT
 **Alpha-3 код:** AUT
 **ISO код:** 040
+**Сторона движения:** Правостороннее движение
 
 ## Признаки для GeoGuessr
 
-*Заполняется пользователем*
+### Google Car (автомобиль Google Street View)
+
+Австрийский автомобиль Google имеет короткую антенну.
+
+![Австрийский автомобиль Google Street View](../images/austria-google-car.jpg)
+
+**Поколение камеры**: Gen 3 и Gen 4
+
+**Различение немецкоязычных стран по метаданным камеры:**
+- **Австрия**: только Generation 3 и Generation 4 (исключения: Generation 2 на одной дороге в Бургенланде и несколько треккеров на горнолыжных курортах)
+- **Германия**: только Generation 4 (исключения: разливы и треккеры)
+- **Швейцария**: покрытие всегда low-cam (можно распознать по большому размытию автомобиля)
+
+**Smallcam coverage**: Австрия также имеет покрытие Generation 4 "smallcam", которое установлено ниже обычного Generation 4 и имеет относительно большое круглое размытие с небольшим выступом спереди. Размытие также может быть полностью прозрачным, что затрудняет его обнаружение.
+
+![Покрытие smallcam в Австрии](../images/austria-smallcam.jpg)
+
+![Метаданные камеры для различения стран](../images/austria-camera-meta.jpg)
+
+### Bollards (ограждения)
+
+**Ключевой признак для определения Австрии**: Отражатели на передней части австрийских ограждений черноватые или темно-красные. Черный отражатель и черная шапка на ограждении — один из самых простых способов определить Австрию. Ни одна другая страна не имеет обе эти особенности на своих ограждениях.
+
+![Австрийские ограждения с черными отражателями](../images/austria-bollards-reflectors.jpg)
+
+Австрийские ограждения имеют черные колпачки с красными отражателями спереди и серые сзади.
+
+![Австрийские ограждения (вид спереди)](../images/austria-bollard-1.jpg)
+
+![Австрийские ограждения (вид сзади)](../images/austria-bollard-2.jpg)
+
+**Отличие от соседних стран:**
+- [Словения](./20251201_slovenia.md) и [Черногория](./20251201_montenegro.md) используют те же ограждения, но с ярко-красными отражателями вместо серых или темно-красных
+- [Германия](./20251201_germany.md) использует простые белые ограждения с серыми отражателями
+- Многие ограждения также имеют небольшую черную шапку в форме соска сверху
+- Ограждения иногда имеют [снежный столб сверху](https://goo.gl/maps/kkcrsQwXxFkn52rq8)
+
+### Road Lines (дорожная разметка)
+
+Австрия использует только белые линии.
+
+![Дорожная разметка Австрии](../images/austria-road-lines.jpg)
+
+### Road Signs (дорожные знаки)
+
+Австрия использует европейский стиль дорожных знаков: красные и белые знаки.
+
+![Дорожный знак Австрии 1](../images/austria-sign-1.jpg)
+
+![Дорожный знак Австрии 2](../images/austria-sign-2.jpg)
+
+![Дорожный знак Австрии 3](../images/austria-sign-3.jpg)
+
+![Дорожный знак Австрии 4](../images/austria-sign-4.jpg)
+
+### Chevrons (шевроны)
+
+Австрия использует две цветовые схемы для шевронов:
+- белый на красном
+- красный на желтом
+
+![Шевроны в Австрии](../images/austria-chevrons.jpg)
+
+**Отличие от Германии**: [Германия](./20251201_germany.md) в основном использует красные на белых шевронах и редко красные на желтых.
+
+### Street Signs (уличные указатели)
+
+Австрийские уличные указатели чаще всего синего цвета.
+
+![Уличный указатель Австрии](../images/austria-street-sign.jpg)
+
+**Вена**: [Вена](./20250101_vienna.md) в Австрии отличается синими указателями названий улиц.
+
+![Синие указатели названий улиц в Вене](../images/austria-vienna-street-name.jpg)
+
+**Знак EINBAHN**: В крупных австрийских городах на синих знаках везде написано слово 'EINBAHN' (одностороннее движение).
+
+![Знак EINBAHN в австрийских городах](../images/austria-einbahn-sign.jpg)
+
+**Отличие от Германии**: В [Германии](./20251201_germany.md) на знаке будет написано "Einbahnstraße".
+
+### Direction Signs (указатели направления)
+
+Указатели направления имеют белый фон, синюю окантовку и уникальный шрифт.
+
+![Указатели направления в Австрии](../images/austria-direction-signs.jpg)
+
+### Town Entrance Signs (знаки въезда в город)
+
+Подобные белые знаки с синей окантовкой и уникальным шрифтом также можно увидеть при въезде в города.
+
+![Знак въезда в город в Австрии](../images/austria-town-entrance-sign.jpg)
+
+**Отличие от Германии**: [Германия](./20251201_germany.md) использует [желтые знаки въезда в город](https://goo.gl/maps/Ljn4XR15iQsetv7m7) с черной окантовкой.
+
+### Green Signs (зеленые знаки)
+
+Зеленые знаки часто можно увидеть, указывающие направление к различным местным объектам.
+
+![Зеленые знаки в Австрии](../images/austria-green-signs.jpg)
+
+### Pedestrian Signs (пешеходные знаки)
+
+Пешеходные знаки имеют уникальный дизайн: вместо зебры они имеют две горизонтальные пунктирные линии.
+
+![Пешеходный знак в Австрии](../images/austria-pedestrian-sign.jpg)
+
+**Отличие от соседних стран**: Все соседние страны имеют пешеходные знаки с зеброй.
+
+### Road Markers (дорожные маркеры)
+
+Дорожные маркеры синие с белыми номерами. Они имеют одно десятичное число, разделенное запятой, что делает их очень узнаваемыми.
+
+![Дорожный маркер в Австрии](../images/austria-road-marker.jpg)
+
+**Отличие от соседних стран:**
+- Словенские дорожные маркеры белые
+- Немецкие маркеры имеют тонкую белую окантовку
+
+### Знаки "Anfang" и "Ende"
+
+Знаки "Остановка запрещена" и "Стоянка запрещена" в Австрии часто имеют слова "Anfang" или "Ende" (означающие "начало" и "конец"), написанные на них или под ними.
+
+![Знаки Anfang и Ende в Австрии](../images/austria-anfang-ende-sign.jpg)
+
+### Dead-End Signs (знаки тупика)
+
+Эти простые знаки тупика с белой перевернутой T уникальны для Австрии.
+
+![Знак тупика в Австрии](../images/austria-dead-end-sign.jpg)
+
+### Road Sign Mounting (крепление дорожных знаков)
+
+Дорожные знаки в Австрии иногда крепятся четырьмя металлическими зажимами, что уникально для Центральной Европы. Однако многие австрийские знаки крепятся и другими способами.
+
+![Крепление знаков четырьмя металлическими зажимами](../images/austria-four-metal-clips.jpg)
+
+### Bus Stops (остановки автобусов)
+
+**Характерный признак для Австрии и [Германии](./20251201_germany.md)**: Австрийские и немецкие остановки автобусов отличаются характерным дизайном — зеленая буква **H** в желтом круге с зеленой окантовкой.
+
+![Знак остановки автобуса в Австрии](../images/austria-bus-sign.jpg)
+
+**Дизайн знака:**
+- Белый прямоугольный знак с закругленными углами
+- В верхней части: желтый круг с зеленой окантовкой
+- Внутри круга: большая жирная зеленая буква **H** (Haltestelle — остановка)
+- Ниже: название остановки черным текстом (например, название города и улицы с суффиксом "gasse")
+
+### License Plates (номерные знаки)
+
+Австрия использует стандартные европейские номерные знаки: длинные белые с синей полосой слева (символ ЕС).
+
+![Номерной знак Австрии](../images/austria-license-plate.jpg)
+
+**Отличие от соседних стран:**
+- [Италия](./20251201_italy.md): итальянские номерные знаки имеют две синие полосы, по обе стороны от знака. Итальянские знаки также обычно заметно короче
+- [Швейцария](./20251201_switzerland.md): швейцарские знаки длинные и белые, но не имеют синей полосы
+
+### Road Numbering System (система нумерации дорог)
+
+#### Motorways (Автомагистрали - A дороги)
+
+**A1-A4** — основные автомагистрали из [Вены](./20250101_vienna.md), идут против часовой стрелки вокруг Вены:
+- **A1** — West Autobahn (на запад)
+- **A2** — Süd Autobahn (на юг)
+- **A3** — Südostautobahn (от A2 к Венгрии, Сопрон)
+- **A4** — Ost Autobahn (на восток)
+- **A5** и **A6** — запланированы
+
+**A7-A14** — на западе страны (номера увеличиваются по мере удаления от Вены)
+
+**A21, A22, A23** — около [Вены](./20250101_vienna.md)
+
+**A25** — связь между A1 и A8
+
+**A26** — запланированная западная объездная дорога [Линца](./20250101_linz.md)
+
+**Особенности:**
+- Есть участки с одной проезжей частью на некоторых автомагистралях (24 км на A2 и некоторые туннели)
+- Все автомагистрали кроме A3 также имеют номер E (европейский маршрут) на некоторых участках
+
+![Знак автомагистрали A14](../images/austria-road-A14.jpg)
+
+![Знак автомагистрали A14 (аксесс)](../images/austria-road-A14-acc.jpg)
+
+#### S Roads (S дороги)
+
+**S дороги** — короткие двухполосные дороги с характеристиками автомагистрали. Для незавершенных участков S дороги используется федеральная дорога LB(300+x), вместе они образуют один маршрут. Например, несколько участков S16 связаны дорогой LB316.
+
+#### Federal Roads (Федеральные дороги - B дороги)
+
+**B1-B10** — главные дороги из [Вены](./20250101_vienna.md), идут по часовой стрелке:
+- Только **B1, B3, B7, B8 и B10** начинаются в Вене
+- **B2** начинается к северу от Холлабрунна
+- **B3** идет от Энгельхартштеттена (B49) через Вену до [Линца](./20250101_linz.md), но была изменена на S5 (бывшая B304) между Штоккерау и Кремсом
+
+![Знак федеральной дороги B10](../images/austria-road-B10.jpg)
+
+![Знак федеральной дороги B205](../images/austria-road-B205.jpg)
+
+**Историческая справка:**
+- Во время Второй мировой войны немецкие номера Reichsstrassen были распространены по всей Австрии
+- Позже была введена новая система нумерации
+- B1 раньше шла от Вены до Брегенца через немецкую B21, западная часть позже была изменена на B312 (стала B179 в 1999 году), B171, B197 и B190
+- Многие другие номера также были изменены
+- Недавно многие дороги без приоритета (особенно все в федеральной земле Верхняя Австрия) были повышены до дорог с приоритетом
+
+![Фрагмент карты Michelin 1952 года](../images/austria-road-michelin-map.jpg)
+
+**Карты для регионального определения:**
+
+Карта австрийских **A-дорог** показывает общую тенденцию увеличения номеров с востока на запад.
+
+![Карта автомагистралей Австрии](../images/austria-autobahn-map.jpg)
+
+Австрийские **B-дороги**, обозначенные белым текстом внутри синего прямоугольника, также следуют общей тенденции увеличения номеров с востока на запад.
+
+![Карта федеральных дорог Австрии](../images/austria-b-roads-map.jpg)
+
+**Важное исключение**: дороги 222-230 расположены внутри земли Вена.
+
+### География и ландшафт
+
+- **70% территории — горы**: Австрия преимущественно горная страна, средняя высота около 900 м над уровнем моря
+- **Восточные Альпы**: большая часть страны занята Восточными Альпами, которые подразделяются на:
+  - Альпы Северного Тироля и Зальцбургские Альпы на севере
+  - Циллертальские и Карнийские Альпы на юге
+- **Высшая точка**: гора Гросглоккнер (3797 м) с ледником Пастерце — одним из крупнейших в Европе
+- **Низшая точка**: озеро Нойзидлер-Зе (115 м над уровнем моря)
+- **Леса**: занимают 47% территории страны (по состоянию на 2010 год)
+- **Границы**: граничит с 8 странами:
+  - На севере: [Чехия](./20251201_czech-republic.md) (362 км), [Германия](./20251201_germany.md) (784 км)
+  - На северо-востоке: [Словакия](./20251201_slovakia.md) (91 км)
+  - На востоке: [Венгрия](./20251201_hungary.md) (366 км)
+  - На юге: [Словения](./20251201_slovenia.md) (330 км), [Италия](./20251201_italy.md) (430 км)
+  - На западе: [Лихтенштейн](./20251201_liechtenstein.md) (35 км), [Швейцария](./20251201_switzerland.md) (164 км)
+
+### Климат
+
+- **Умеренный, переходный к континентальному**, сильно зависящий от высоты
+- **Лето**: тёплое, солнечное; средняя температура +20°C. В горах ночью может достигать нулевой отметки
+- **Зима**: мягкая на равнинах (до -2°C), холодная в горах (до -14°C)
+- **Осадки**: от 500 до 3000 мм в год в зависимости от высоты и рельефа
+
+### Язык и письменность
+
+Официальный язык Австрии — немецкий.
+
+![Алфавит Австрии](../images/austria-alphabet.png)
+
+- **Государственный язык**: немецкий
+- **Австрийский вариант немецкого**: разговорный и официальный язык австрийцев существенно отличается от официального немецкого языка [Германии](./20251201_germany.md)
+- **Региональные языки**: градищанско-хорватский, венгерский, словенский (официальные в отдельных землях)
+- **Вывески**: немецкий язык с австрийскими особенностями, возможны региональные языки в пограничных областях
+- **Доменное имя**: .at
+
+**Терминология улиц/дорог:**
+- **Straße** — улица
+- **Gasse** — переулок, узкая улица
+- **Weg** — дорога, путь
+
+**Особенности алфавита:**
+- **Уникальная буква**: **ß** (эсцет) — характерна для немецкого языка
+- **Также встречается в скандинавских языках и венгерском**: **ä, ö, ü** (умлауты)
+
+### Архитектура
+
+Распространены дома в стиле "шале" (альпийские дома).
+
+![Архитектура Австрии](../images/austria-architecture.jpg)
+
+![Детали альпийской архитектуры](../images/austria-alpine-architecture-detail.jpg)
+
+Альпийская архитектура распространена в Австрии и других странах Альп. Дома обычно имеют:
+- **Светлые стены** с деревянными элементами, такими как балконы или панели вокруг верхнего этажа
+- **Темные деревянные крыши**, которые могут выступать наружу
+- Крыши иногда могут быть наклонены вниз спереди и сзади
+- Дома также часто многоэтажные
+
+**Примечание**: [Германия](./20251201_germany.md) использует похожую архитектуру в своих южных землях.
+
+- **Готика**: собор святого Стефана в [Вене](./20250101_vienna.md) — один из символов страны
+- **Барокко**: множество дворцов и храмов в стиле барокко в [Вене](./20250101_vienna.md), [Зальцбурге](./20250101_salzburg.md), [Граце](./20250101_graz.md)
+- **Сецессион (модерн)**: австрийское проявление стиля модерн, особенно в [Вене](./20250101_vienna.md)
+- **Альпийская архитектура**: традиционные альпийские дома в горных регионах (стиль "шале")
+- **Романский стиль**: сохранились храмы (например, церковь Рупрехтскирхе в [Вене](./20250101_vienna.md))
+- **Современная архитектура**: здания постмодернистского стиля в центральной части [Вены](./20250101_vienna.md)
+
+### Города
+
+- **Столица**: [Вена](./20250101_vienna.md) — крупнейший город (1,98 млн человек)
+- **Крупные города**:
+  - [Грац](./20250101_graz.md) (298 тыс.) — Штирия
+  - [Линц](./20250101_linz.md) (210 тыс.) — Верхняя Австрия
+  - [Зальцбург](./20250101_salzburg.md) (157 тыс.) — Зальцбург
+  - [Инсбрук](./20250101_innsbruck.md) (131 тыс.) — Тироль
+  - [Клагенфурт](./20250101_klagenfurt.md) (104 тыс.) — Каринтия
+
+### Уникальные знаки городов
+
+**Вена**: Уличные знаки [Вены](./20250101_vienna.md) чрезвычайно узнаваемы — темно-синие таблички с традиционным белым шрифтом с засечками. Номер в начале указывает, в каком районе вы находитесь.
+
+![Уличные знаки Вены](../images/austria-vienna-street-signs.jpg)
+
+**Другие крупные города**: Большинство других крупных городов в Австрии также имеют свои уникальные уличные знаки.
+
+![Уникальные уличные знаки городов Австрии](../images/austria-city-street-signs.jpg)
+
+**Отличия:**
+- **Вена** — номер района
+- **Зальцбург** — уникальный шрифт
+- **Клагенфурт** — неправильная белая окантовка
+- **Санкт-Пёльтен** — закругленная белая окантовка
+
+**Красно-белые полосы**: Столбы в [Вене](./20250101_vienna.md) и [Инсбруке](./20250101_innsbruck.md) имеют красно-белые полосы, которые выглядят как австрийский флаг. Их можно различить по тому, что полосы в [Вене](https://goo.gl/maps/N4tkGXcAt1sbjxNy7) тоньше, и обычно их две на каждом столбе.
+
+![Красно-белые полосы на столбах](../images/austria-red-white-strips.jpg)
+
+### Религия и культура
+
+- **Католики**: 55,2% населения (по переписи 2021 года)
+- **Нерелигиозные**: 22,4%
+- **Мусульмане**: 8,3%
+- **Православные**: 4,9%
+- **Католические храмы**: характерные для австрийских городов и деревень
+
+### Транспорт и инфраструктура
+
+- **Денежная единица**: евро (с 2002 года, ранее австрийский шиллинг)
+- **Железные дороги**: Австрийская федеральная железная дорога (протяжённость свыше 6000 км)
+- **Трамвайные системы**: в [Вене](./20250101_vienna.md), [Граце](./20250101_graz.md), [Линце](./20250101_linz.md), [Инсбруке](./20250101_innsbruck.md)
+- **Аэропорты**: Венский, Грацский, Линцский, Инсбрукский, Зальцбургский
+
+### Растительность и ландшафт
+
+Австрия — очень горная страна.
+
+![Ландшафт Австрии](../images/austria-landscape.jpg)
+
+![Детали ландшафта Австрии](../images/austria-landscape-detail.jpg)
+
+- **Леса**: 47% территории, преимущественно хвойные и смешанные леса
+- **Альпийская растительность**: в горных районах
+- **Разнообразие**: от равнинных лесов до альпийских лугов
+- **Большая часть Австрии горная и покрыта лесами**: Однако некоторые области на востоке и северо-востоке намного более плоские и сельскохозяйственные
+- **Виноградники**: ограничены крайней восточной частью страны, особенно близко к [Вене](./20250101_vienna.md) и вокруг озера Нойзидлер-Зе
+
+![Карта производства вина в Австрии](../images/austria-wine-production.jpg)
+
+- **Высота над уровнем моря**: очень важна при определении региона Австрии на основе ландшафта. Центральные и западные части Австрии наиболее горные. Более плоские области находятся на востоке, в основном у границ. Даже в плоских областях холмистый рельеф все еще распространен
+
+![Карта высот Австрии](../images/austria-elevation-map.jpg)
+
+- **Самые высокие части Альп**: находятся в западной и центральной частях страны. Самые высокие горы находятся в "ручке" Австрии, на границе с [Италией](./20251201_italy.md). Эти горы можно распознать по их обычно более острым пикам и [величественному виду](https://www.google.com/maps/@47.1389055,10.2855153,3a,75y,66.33h,92.53t/data=!3m7!1e1!3m5!1sTDJ_tFCAlBIH4nUIgmkiMw!2e0!5s20200901T000000!7i16384!8i8192?entry=ttu)
+
+![Самые высокие горы Австрии](../images/austria-highest-mountains.jpg)
+
+### Utility Poles (коммунальные столбы)
+
+Круглые деревянные столбы — наиболее распространенный тип столбов в Австрии.
+
+![Деревянные столбы в Австрии](../images/austria-wooden-poles.jpg)
+
+### Yellow Gas Poles (желтые газовые столбы)
+
+Эти желтые газовые столбы, напоминающие снежные столбы, уникальны для Австрии.
+
+![Желтые газовые столбы в Австрии](../images/austria-yellow-gas-poles.jpg)
+
+### Tin Foil Antenna (антенна из фольги)
+
+Эта уникальная антенна из фольги может быть найдена в западной Австрии, в основном у границы со [Швейцарией](./20251201_switzerland.md).
+
+![Уникальная антенна из фольги в Австрии](../images/austria-tin-foil-antenna.jpg)
+
+**Примечание**: Эта антенна уникальна для Австрии.
+
+### Lake Constance (озеро Констанц)
+
+[Озеро Констанц](https://goo.gl/maps/g3SY4BSFbGSHmLnj7) (известное в немецком языке как Бодензее) — большое озеро на западной границе Австрии. Его можно распознать по его обширности, которая не видна в других озерах в горной части страны.
+
+![Озеро Констанц](../images/austria-lake-constance.jpg)
 
 ## Географические особенности
 
-*Заполняется пользователем*
+- **Площадь**: 83 879 км²
+- **Население**: 9,2 млн человек (2025)
+- **Горная страна**: 70% территории занимают горы
+- **Восточные Альпы**: основная горная система
+- **Центральноевропейское расположение**: страна находится в центре Европы, что делает её важным транзитным узлом
+- **Разнообразие ландшафтов**: от высокогорных альпийских районов до равнинных долин
 
 ## Культурные особенности
 
-*Заполняется пользователем*
+![Общий вид Австрии](../images/austria-general.jpg)
+
+- **Немецкий язык**: государственный язык с австрийскими диалектами, близкими к баварскому диалекту [Германии](./20251201_germany.md)
+- **Католицизм**: преобладающая религия, влияющая на архитектуру и культуру
+- **Музыкальная традиция**: родина многих известных композиторов (Моцарт, Гайдн, Шуберт, Штраус)
+- **Горнолыжный спорт**: важная часть культуры и экономики
+- **Туризм**: страна традиционного зимнего туризма, особенно горнолыжного
+
+## Региональные и земельные признаки
+
+### Vorarlberg (Форарльберг)
+
+- **Остановки автобусов**: Остановки автобусов, состоящие из неоново-желтых столбов, встречаются в Форарльберге
+
+![Остановка автобуса в Форарльберге](../images/austria-vorarlberg-bus-stop.jpg)
+
+- **Желто-белые полосы**: Желтые и белые полосы вокруг столбов и указателей встречаются в Форарльберге
+
+![Желто-белые полосы в Форарльберге](../images/austria-vorarlberg-sticker.jpg)
+
+- **Белые километровые маркеры**: Белые километровые маркеры можно найти в Форарльберге, а также на дороге в [западном Зальцбурге](https://maps.app.goo.gl/sDKDbQ2Czn1zkd59A)
+
+![Белый километровый маркер в Форарльберге](../images/austria-vorarlberg-white-km-marker.jpg)
+
+### Salzburg (Зальцбург)
+
+- **Белая нарисованная квадратная метка**: Большой белый нарисованный квадрат посередине дороги можно найти рядом с километровыми маркерами в Зальцбурге
+
+![Белая квадратная метка в Зальцбурге](../images/austria-salzburg-km-line.jpg)
+
+### Burgenland (Бургенланд)
+
+- **Зеленые знаки "Güterweg"**: Зеленые знаки ["Güterweg"](https://de.wikipedia.org/wiki/G%C3%BCterweg) встречаются в Бургенланде
+
+![Зеленый знак Güterweg в Бургенланде](../images/austria-burgenland-guterweg.jpg)
+
+### Upper Austria (Верхняя Австрия)
+
+- **Белые знаки "Güterweg"**: Белые знаки "Güterweg" с черной окантовкой в основном встречаются в Верхней Австрии
+
+![Белый знак Güterweg в Верхней Австрии](../images/austria-upper-austria-guterweg.jpg)
+
+### Lower Austria (Нижняя Австрия)
+
+- **Желто-синие окантовки знаков**: В Нижней Австрии можно найти знаки с желтыми и синими окантовками, соответствующие [флагу региона](https://upload.wikimedia.org/wikipedia/commons/thumb/b/b1/Flag_of_Lower_Austria_%28state%29.svg/2560px-Flag_of_Lower_Austria_%28state%29.svg.png)
+
+![Желто-синие окантовки знаков в Нижней Австрии](../images/austria-lower-austria-sign-border.jpg)
+
+### State Flags and Bus Companies (флаги земель и автобусные компании)
+
+Каждая австрийская земля имеет свой уникальный флаг, который можно увидеть на знаках и в других местах.
+
+![Флаги австрийских земель](../images/austria-state-flags.jpg)
+
+Каждая австрийская земля имеет свою уникальную автобусную компанию, логотип которой можно увидеть на боковой стороне автобусов.
+
+![Автобусные компании по землям](../images/austria-bus-companies.jpg)
 
 ## Связанные заметки
 
-*Ссылки на связанные заметки добавляются по мере наполнения*
+- [Германия](./20251201_germany.md) — соседняя страна, схожий язык
+- [Швейцария](./20251201_switzerland.md) — соседняя страна, альпийский регион
+- [Италия](./20251201_italy.md) — южный сосед
+- [Чехия](./20251201_czech-republic.md) — северный сосед
+- [Словения](./20251201_slovenia.md) — южный сосед, схожие ограждения
+- [Вена](./20250101_vienna.md) — столица Австрии
+- [Зальцбург](./20250101_salzburg.md) — крупный город, известный историческим центром
+- [Инсбрук](./20250101_innsbruck.md) — крупный город в Тироле
 
