20251201 - Добавлена информация об Австрии из Reddit-треда для различения с Германией и Швейцарией

--- a/src/20251201_austria.md
+++ b/src/20251201_austria.md
@@ -33,9 +33,14 @@ topic: География
 **Поколение камеры**: Gen 3 и Gen 4
 
 **Различение немецкоязычных стран по метаданным камеры:**
-- **Австрия**: только Generation 3 и Generation 4 (исключения: Generation 2 на одной дороге в Бургенланде и несколько треккеров на горнолыжных курортах)
-- **Германия**: только Generation 4 (исключения: разливы и треккеры)
-- **Швейцария**: покрытие всегда low-cam (можно распознать по большому размытию автомобиля)
+- **Австрия**: только Generation 3 и Generation 4 (исключения: Generation 2 на одной дороге в Бургенланде и несколько треккеров на горнолыжных курортах). Покрытие доступно по всей стране, не только в крупных городах
+- **Германия**: только Generation 4 (исключения: разливы и треккеры). **Важное отличие**: покрытие [Германии](./20251201_germany.md) обычно только в крупных городах, а не по всей стране
+- **Швейцария**: покрытие всегда low-cam (можно распознать по большому размытию автомобиля). Камера установлена ниже обычного уровня из-за законов о приватности в стране
+
+**Размытие зданий и приватность:**
+- **Германия**: часто встречаются прямоугольные размытия домов и зданий из-за строгих законов о приватности. Если каждое 4-е здание полностью размыто в виде идеального прямоугольника — высокая вероятность, что это [Германия](./20251201_germany.md)
+- **Австрия**: размытия встречаются реже и не так систематично, как в [Германии](./20251201_germany.md)
+- **Швейцария**: размытия встречаются, но основная отличительная черта — низкая камера (low-cam)
 
 **Smallcam coverage**: Австрия также имеет покрытие Generation 4 "smallcam", которое установлено ниже обычного Generation 4 и имеет относительно большое круглое размытие с небольшим выступом спереди. Размытие также может быть полностью прозрачным, что затрудняет его обнаружение.
 
@@ -58,7 +63,8 @@ topic: География
 **Отличие от соседних стран:**
 - [Словения](./20251201_slovenia.md) и [Черногория](./20251201_montenegro.md) используют те же ограждения, но с ярко-красными отражателями вместо серых или темно-красных
 - [Германия](./20251201_germany.md) использует простые белые ограждения с серыми отражателями
-- Многие ограждения также имеют небольшую черную шапку в форме соска сверху
+- [Швейцария](./20251201_switzerland.md): ограждения круглые с двумя черными точками сзади (с левой стороны дороги)
+- **Ключевой признак Австрии**: многие ограждения имеют небольшую черную "шишечку" (nub) сверху, которую не имеет ни одна другая страна. Это один из самых надежных признаков для определения Австрии
 - Ограждения иногда имеют [снежный столб сверху](https://goo.gl/maps/kkcrsQwXxFkn52rq8)
 
 ### Road Lines (дорожная разметка)
@@ -102,6 +108,8 @@ topic: География
 **Знак EINBAHN**: В крупных австрийских городах на синих знаках везде написано слово 'EINBAHN' (одностороннее движение).
 
 ![Знак EINBAHN в австрийских городах](../images/austria-einbahn-sign.jpg)
+
+**Отличие от Германии**: В [Германии](./20251201_germany.md) на знаках одностороннего движения написано "Einbahnstraße", тогда как в Австрии просто "Einbahn".
 
 **Отличие от Германии**: В [Германии](./20251201_germany.md) на знаке будет написано "Einbahnstraße".
 
@@ -181,7 +189,9 @@ topic: География
 
 **Отличие от соседних стран:**
 - [Италия](./20251201_italy.md): итальянские номерные знаки имеют две синие полосы, по обе стороны от знака. Итальянские знаки также обычно заметно короче
-- [Швейцария](./20251201_switzerland.md): швейцарские знаки длинные и белые, но не имеют синей полосы
+- [Швейцария](./20251201_switzerland.md): швейцарские знаки длинные и белые, но **не имеют синей полосы** слева (это ключевое отличие от Австрии и Германии)
+- [Германия](./20251201_germany.md): немецкие номерные знаки **не имеют красного цвета вообще** — только белый, черный и синяя полоса слева
+- **Австрия**: австрийские номерные знаки часто имеют **красные линии и элементы** на знаке (даже если знак размыт, красный цвет обычно виден)
 
 ### Road Numbering System (система нумерации дорог)
 
@@ -248,6 +258,10 @@ topic: География
 
 ### География и ландшафт
 
+**Важное отличие от Германии**: [Германия](./20251201_germany.md) обычно не такая горная, как Австрия и [Швейцария](./20251201_switzerland.md). Если видите горы и немецкий язык — это скорее всего Австрия или [Швейцария](./20251201_switzerland.md), а не [Германия](./20251201_germany.md).
+
+**Сходство со Швейцарией**: Западная часть Австрии выглядит очень похоже на [Швейцарию](./20251201_switzerland.md), поэтому если не видно угла камеры, может быть сложно различить. В таких случаях ключевые признаки — ограждения с черной "шишечкой" (Австрия) или низкая камера (Швейцария).
+
 - **70% территории — горы**: Австрия преимущественно горная страна, средняя высота около 900 м над уровнем моря
 - **Восточные Альпы**: большая часть страны занята Восточными Альпами, которые подразделяются на:
   - Альпы Северного Тироля и Зальцбургские Альпы на севере
@@ -282,13 +296,17 @@ topic: География
 - **Доменное имя**: .at
 
 **Терминология улиц/дорог:**
-- **Straße** — улица
-- **Gasse** — переулок, узкая улица
+- **Straße** — улица (чаще используется в [Германии](./20251201_germany.md))
+- **Gasse** — переулок, узкая улица (чаще используется в Австрии)
 - **Weg** — дорога, путь
 
+**Отличие от Германии**: В [Германии](./20251201_germany.md) улицы обычно называются "Straße", тогда как в Австрии чаще используется "Gasse".
+
 **Особенности алфавита:**
-- **Уникальная буква**: **ß** (эсцет) — характерна для немецкого языка
+- **Уникальная буква**: **ß** (эсцет) — характерна для немецкого языка. Используется в Австрии и [Германии](./20251201_germany.md)
+- **Важное отличие от Швейцарии**: [Швейцария](./20251201_switzerland.md) **не использует букву ß**, вместо неё используется "ss"
 - **Также встречается в скандинавских языках и венгерском**: **ä, ö, ü** (умлауты)
+- **Французский язык**: если видите французский язык в немецкоязычном регионе — это почти всегда [Швейцария](./20251201_switzerland.md) (особенно в западной части)
 
 ### Архитектура
 
@@ -326,6 +344,8 @@ topic: География
 ### Уникальные знаки городов
 
 **Вена**: Уличные знаки [Вены](./20250101_vienna.md) чрезвычайно узнаваемы — темно-синие таблички с традиционным белым шрифтом с засечками. Номер в начале указывает, в каком районе вы находитесь.
+
+**Важная статистика**: Покрытие Австрии в Google Street View примерно на 99% состоит из [Вены](./20250101_vienna.md), поэтому если вы видите австрийские признаки, скорее всего вы находитесь в столице.
 
 ![Уличные знаки Вены](../images/austria-vienna-street-signs.jpg)
 
