--- a/src/20251201_austria.md
+++ b/src/20251201_austria.md
@@ -12,15 +12,18 @@ topic: География
 
 ## Основная информация
 
-**Полное название:** Австрийская Республика
-**Часть света:** Европа
-**Расположение:** Западная Европа
+| Поле                  | Значение                  |
+|-----------------------|--------------------------|
+| **Полное название**   | Австрийская Республика   |
+| **Часть света**       | Европа                   |
+| **Расположение**      | Западная Европа          |
+| **Название на английском**     | Austria                |
+| **Название на местном языке**  | Österreich             |
+| **Alpha-2 код**       | AT                       |
+| **Alpha-3 код**       | AUT                      |
+| **ISO код**           | 040                      |
+| **Сторона движения**  | Правостороннее движение  |
 
-**Название на английском:** Austria
-**Alpha-2 код:** AT
-**Alpha-3 код:** AUT
-**ISO код:** 040
-**Сторона движения:** Правостороннее движение
 
 ## Признаки для GeoGuessr
 
