--- a/src/20251201_austria.md
+++ b/src/20251201_austria.md
@@ -12,17 +12,20 @@ topic: География
 
 ## Основная информация
 
-| Поле                  | Значение                  |
-|-----------------------|--------------------------|
-| **Полное название**   | Австрийская Республика   |
-| **Часть света**       | Европа                   |
-| **Расположение**      | Западная Европа          |
-| **Название на английском**     | Austria                |
-| **Название на местном языке**  | Österreich             |
-| **Alpha-2 код**       | AT                       |
-| **Alpha-3 код**       | AUT                      |
-| **ISO код**           | 040                      |
-| **Сторона движения**  | Правостороннее движение  |
+| Поле                              | Значение                                   |
+|-----------------------------------|--------------------------------------------|
+| **Полное название**               | Австрийская Республика                     |
+| **Часть света**                   | Европа                                     |
+| **Расположение**                  | Западная Европа                            |
+| **Название на английском**        | Austria                                    |
+| **Название на местном языке**     | Österreich                                 |
+| **Alpha-2 код**                   | AT                                         |
+| **Alpha-3 код**                   | AUT                                        |
+| **ISO код**                       | 040                                        |
+| **Сторона движения**              | Правостороннее движение                    |
+| **Телефонный код**                | +43 (например, +43 1 2345678)              |
+| **Домен верхнего уровня**         | .at                                        |
+| **Денежные единицы**              | Евро (EUR, €)                              |
 
 
 ## Признаки для GeoGuessr
